--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,6 @@ sourceSets {
 }
 
 dependencies {
+    runtime files('resources/')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
